<resources>
    <string name="app_name">Nasa Epic</string>

    <string name="icon_wallpaper">&#xf1c5;</string>
    <string name="icon_share">&#xf1e0;</string>
    <string name="icon_print">&#xf02f;</string>
    <string name="icon_camera">&#xf030;</string>
    <string name="icon_space_shuttle">&#xf197;</string>
    <string name="icon_heart">&#xf004;</string>
    <string name="icon_video_camera">&#xf03d;</string>

    <!-- Home Screen -->
    <string name="daily_images">Daily Pictures</string>
    <string name="special_events">Special Events</string>
    <string name="discover">EPIC</string>

    <string name="permission">Permission</string>
    <string name="need_Internet_permission">Internet permission is required to access images from NASA</string>
    <string name="need_nw_state_permissin">Access to Network Status watch is required to monitor the Internet status</string>
    <string name="no_proceed_without_Internet">App cannot proceed without Internet permission</string>
    <string name="no_proceed_without_nw_access">App cannot proceed without access to Network Status permission</string>
    <string name="Internet">Internet</string>
    <string name="enable_Internet">Enable Internet to load data from NASA</string>
    <string name="loading_str">Satellite is clicking photos for you</string>
    <string name="connectin">Connection</string>
    <string name="failed_to_load">Failed to load images from satellite</string>
    <string name="aborting">Aborting this operation!</string>
    <string name="require_write_to_external">Write to External storage permission should be enabled!</string>
    <string name="require_storage_permission_dialog">Storage permission is required to continue this operation</string>
    <string name="no_pics_available">Sorry! No pics available for the date</string>

    <!-- Detail Fragment strings -->
    <string name="detail_fragment_progress_title"></string>
    <string name="detail_fragment_progress_dialog">Downloading the image\nPlease wait...</string>
    <string name="print_title">EPIC print</string>

    <!-- Website -->
    <string name="website">www.eastrivervillage.com</string>
    <string name="code_repo">https://github.com/kumaran127/nasa_epic</string>
    <string name="nasa_epic_website">https://epic.gsfc.nasa.gov/</string>

    <!-- Menu -->
    <string name="settings">Settings</string>
    <string name="calender">Select Date</string>
    <string name="dev">About</string>

    <!--Preferences-->
    <string name="preference_quality">Enhanced Image</string>
    <string name="preference_option_normal">Normal</string>
    <string name="preference_option_enhanced">Enhanced</string>

    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="exit">Exit</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="empty_str"></string>
    <string name="retry">Retry</string>
    <string name="ok">Ok</string>
    <string name="loading">Loading</string>
    <string name="loading_3dot">Loading...</string>
    <string name="error_caps">ERROR</string>
    <string name="server_error">Server error. Please try after sometime</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- About page -->
    <string name="ab_website">Developer\'s website</string>
    <string name="ab_source">Repository</string>
    <string name="ab_nasa_website">NASA EPIC website</string>

    <!-- Special Events -->
    <string name="view_the_images">View the Images</string>
    <string name="watch_the_video">Watch the Video</string>
    <string name="no_connection_caps">NO CONNECTION</string>
    <string name="internet_is_required">Internet connectivity is required to fetch data</string>
    <string name="no_data_available">Sorry. No data available now. Please try after sometime</string>

    <!-- Video Player Activity -->
    <string name="error_playing_video">Cannot play video here. Shall I open the video in browser</string>
    <string name="no_related_activity">Sorry. Cannot find a browser to play this video</string>
</resources>
