<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eastrivervillage.epic.HomeActivity"
    android:background="@color/card_bg_color"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/iv_homeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        app:srcCompat="@drawable/home_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:background="@drawable/border"
            android:padding="10dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tv_daily_images"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/icon_camera"
                style="@style/home_icon"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daily_images"
                style="@style/home_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:background="@drawable/border"
            android:padding="10dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tv_special_events"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/icon_heart"
                style="@style/home_icon"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/home_text"
                android:text="@string/special_events" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:background="@drawable/border"
            android:padding="10dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tv_discover"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/icon_space_shuttle"
                style="@style/home_icon"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/discover"
                style="@style/home_text" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
